# agent-functions-lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini
examples/: advanced_math_usage.py  advanced_usage.py  agent_triggered_example.py  basic_usage.py  math_functions.py  plugin_system.py
examples/js/: agent-triggered-example.js
src/agent_functions/: __init__.py  core.py  exceptions.py  service.py
src/agent_functions/core_functions/: cognitive_ops.py  data_ops.py  math_ops.py  memory_ops.py  text_ops.py
src/js/: core.js  python-interop.js  test_cognitive.js
src/js/core_functions/: cognitive_ops.js  math_ops.js  memory_ops.js
tests/: test_cognitive_ops.py  test_core.py  test_data_ops.py  test_math_ops.py  test_memory_ops.py  test_text_ops.py
