[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-functions"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A modular function library for agent workflows"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0"
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "black", "isort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
